# AI-Excel-Agent

./: .gitignore  AGENTS.md  AI-Excel-Agent.spec  README.md  SECURITY.md  app.py  diagnose_socket.py  install.bat  installer.nsi  pyproject.toml  requirements.txt  run_app.py  start.bat  start.command
.streamlit/: config.toml
config/: settings.yaml  style_presets.yaml  table_types.yaml
demo_fill_table/: _check.py  _make_demo.py  _run_verify.py  表A_工资数据.xlsx  表B_花名册.xlsx
demo_teaching/: _regress_step2.py  _run_exam_schedule.py  _run_grade_analysis.py  _test_charts_review.py  _test_diagnosis.py  期末考试报名名单.xlsx  高一3班期中成绩.xlsx
docs/: AGENT_REBUILD_BRIEF.md  AGENT_TEST_GUIDE.md  STABILITY_REPORT_2026-06-23.md  V1_COMPLETION_REPORT.md
scripts/: agent_test_harness.py  app_preflight.py  archive_old_outputs.py  v1_smoke_test.py
skills/: registry.py
tests/: conftest.py  test_agent_orchestrator.py  test_agent_recalc_gate.py  test_api_settings.py  test_api_task_planner.py  test_archive_outputs.py  test_basic_generation.py  test_content_plan.py  test_custom_api_service.py  test_diagnostic_report.py  test_finish_claim.py  test_formula_library.py  test_generation_fallback.py  test_generation_service.py  test_global_sales_compiler.py  test_inline_complex_requirements.py  test_llm_workbook_agent.py  test_manifest.py  test_memory_store.py  test_model_endpoints.py  test_model_registry.py  test_preview.py  test_recalc.py  test_requirement_analysis.py  test_revision_service.py  test_rich_workbook_builder.py  test_run_python_sandbox.py  test_runtime_compat.py  test_streamlit_app.py  (+14 more)
(+102 files in other folders)
